# nuage-ospdirector

./: .gitreview  .zuul.yaml  README.md  build.sh  nuage-tripleo-heat-templates.spec.in
avrs/: README.md  avrs-environment.yaml  avrs-first-boot.yaml  avrs-post.yaml  avrs-role.yaml  create_compute_avrs_role.sh  nova-compute-avrs-8.0.2-43.yaml  nova-compute-avrs-8.0.4-20.yaml
generate-cms-id/: README.md  configure_vsd_cms_id.py  restproxy.py
image-patching/: MANIFEST.in  README.md  README_5.0.md  README_6.0.md  nuage-puppet-modules-0.0.0.x86_64.rpm  nuage-puppet-modules-1.0.x86_64.rpm  nuage-puppet-modules-2.0.x86_64.rpm  nuage-puppet-modules-3.0.x86_64.rpm  nuage-puppet-modules-3.2-R4.x86_64.rpm  nuage-puppet-modules-3.2-R6.x86_64.rpm  nuage-puppet-modules-4.0.x86_64.rpm  nuage-puppet-modules-5.0.x86_64.rpm  nuage-puppet-modules-5.1.0.x86_64.rpm  nuage-puppet-modules-5.2.0.x86_64.rpm  nuage_overcloud_full_patch.sh  setup.cfg  setup.py
image-patching/nuage_image_patching_scripts/: nuage_5.0_ospd13.repo.sample  nuage_6.0_ospd13.repo.sample  nuage_overcloud_full_patch.py  nuage_patching_config.yaml  nuage_repo.sample
image-patching/nuage_image_patching_scripts/utils/: common.py  constants.py
image-patching/stopgap-script/: README.md  README_5.0.md  README_6.0.md  nuage_6.0_ospd13.repo.sample  nuage_ospd13.repo.sample  nuage_overcloud_full_patch.py  nuage_overcloud_full_patch.sh  nuage_overcloud_full_patch_12.py  nuage_overcloud_full_patch_13.py  nuage_overcloud_full_patch_cbis.sh  nuage_overcloud_full_patch_epel.sh  nuage_overcloud_full_patch_w_ml2.py  nuage_overcloud_full_patch_w_ml2.sh  nuage_patching_config.yaml
image-patching/stopgap-script/10_files/: config.pp  engine.pp  init.pp  local_settings.py.erb  neutron-server.service  nuage.pp  sriov.pp  tripleo_profile_nuage.pp  tripleo_profile_sriov.pp
image-patching/stopgap-script/11_files/: config.pp  init.pp  local_settings.py.erb  ml2.pp  nuage.pp  tripleo_profile_nuage.pp  tripleo_profile_sriov.pp
image-patching/stopgap-script/12_files/: nova-api.pp
image-patching/stopgap-script/13_files/: conductor.pp  neutron_init.pp
image-patching/stopgap-script/7_files/: impl_ifcfg.py
image-patching/stopgap-script/8_files/: neutron_plugin_nuage.rb
image-patching/stopgap-script/9_files/: filter.pp  grub  ml2.pp  neutron-server.service  nuage.pp  sriov.pp
image-patching/stopgap-script/utils/: common.py  constants.py
nuage-ospd12-dockerfiles/: nuage-heat-api-cfn-dockerfile  nuage-heat-api-dockerfile  nuage-heat-engine-dockerfile  nuage-horizon-dockerfile  nuage-nova-api-dockerfile  nuage-nova-conductor-dockerfile  nuage-nova-scheduler-dockerfile
nuage-ospd13-dockerfiles/: README.md  nova-compute-avrs-dockerfile  nuage-heat-api-cfn-dockerfile  nuage.repo  (+7 more)
nuage-ospd13-dockerfiles-wip/: generate_nuage_dockerfiles.py
(+287 files in other folders)
