[metadata]
name = nuage-image-patching-scripts
summary = "Nuage OSPD Image Patching for Nuage Networks"
author = Nuage Networks / NOKIA
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
license = ASL 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages =
   nuage_image_patching_scripts

[entry_points]
console_scripts =
    nuage-image-patching = nuage_image_patching_scripts.nuage_overcloud_full_patch:main
